--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
           <div class="row">
             <!-- sidebar -->
-            <div class="col-lg-3 sidebar fixed-top">
+            <div class="col-xl-2 col-lg-3 col-md-4 sidebar fixed-top">
               <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">Code and Create</a>
               <div class="bottom-border pb-3">
                 <img src="images/admin.jpeg" alt="" width="50" class="rounded-circle mr-3">
@@ -39,8 +39,27 @@
             </div>
             <!-- End sidebar -->
             <!-- Top Nav -->
-            <div class="col-lg-9">
-
+            <div class="col-xl-10 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-navbar">
+              <div class="row align-items-center">
+                <div class="col-md-4">
+                  <h4 class="text-light text-uppercase mb-0">Dashboard</h4>
+                </div>
+                <div class="col-md-5">
+                  <form action="">
+                    <div class="input-group">
+                      <input type="text" class="form-control search-input" placeholder="Search...">
+                      <button class="btn btn-light search-button"><i class="fas fa-search text-danger"></i></button>
+                    </div>
+                  </form>
+                </div>
+                <div class="col-md-3">
+                  <ul class="navbar-nav">
+                    <li class="nav-item icon-parent"><a href="#" class="nav-link icon-bullet"><i class="fas fa-comments text-muted fa-lg"></i></a></li>
+                    <li class="nav-item icon-parent"><a href="#" class="nav-link icon-bullet"><i class="fas fa-bell text-muted fa-lg"></i></a></li>
+                    <li class="nav-item ml-md-auto"><a href="#" class="nav-link"><i class="fas fa-sign-out-alt text-danger fa-lg"></i></a></li>
+                  </ul>
+                </div>
+              </div>
             </div>
             <!-- End Top Nav -->
           </div>
