--- a/index.html
+++ b/index.html
@@ -166,6 +166,183 @@
     </div>
     <!-- End Cards -->
 
+    <!-- Tables -->
+    <section>
+      <div class="container-fluid">
+        <div class="row mb-5">
+          <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+            <div class="row align-items-center">
+              <div class="col-xl-6 col-12 mb-4 mb-xl-0">
+                <h3 class="text-muted text-center mb-3">Staff Salary</h3>
+                <table class="table table-striped bg-light text-center">
+                  <thead>
+                    <tr class="text-muted">
+                      <th>#</th>
+                      <th>Name</th>
+                      <th>Salary</th>
+                      <th>Date</th>
+                      <th>Content</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th>1</th>
+                      <td>John</td>
+                      <td>$2000</td>
+                      <td>01/20/2019</td>
+                      <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                    </tr>
+                    <tr>
+                      <th>2</th>
+                      <td>Jackson</td>
+                      <td>$12000</td>
+                      <td>25/03/2019</td>
+                      <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                    </tr>
+                    <tr>
+                      <th>3</th>
+                      <td>Kelly</td>
+                      <td>$8000</td>
+                      <td>12/06/2019</td>
+                      <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                    </tr>
+                    <tr>
+                      <th>4</th>
+                      <td>Jonathan</td>
+                      <td>$2000</td>
+                      <td>01/01/2019</td>
+                      <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                    </tr>
+                    <tr>
+                      <th>5</th>
+                      <td>Nina</td>
+                      <td>$2500</td>
+                      <td>25/05/2019</td>
+                      <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- Pagination -->
+                <nav>
+                  <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                      <a href="#" class="page-link py-2 px-3">
+                        <span>&laquo;</span>
+                      </a>
+                    </li>
+                    <li class="page-item active">
+                      <a href="#" class="page-link py-2 px-3">
+                        1
+                      </a>
+                    </li>
+                    <li class="page-item">
+                      <a href="#" class="page-link py-2 px-3">
+                        2
+                      </a>
+                    </li>
+                    <li class="page-item">
+                      <a href="#" class="page-link py-2 px-3">
+                        3
+                      </a>
+                    </li>
+                    <li class="page-item">
+                      <a href="#" class="page-link py-2 px-3">
+                        <span>&raquo;</span>
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+                <!-- End Pagination -->
+              </div>
+              <div class="col-xl-6 col-12">
+                <h3 class="text-muted text-center mb-3">Recent Payments</h3>
+                <table class="table table-dark table-hover text-center">
+                  <thead>
+                    <tr class="text-muted">
+                      <th>#</th>
+                      <th>Name</th>
+                      <th>Price</th>
+                      <th>Date</th>
+                      <th>Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th>1</th>
+                      <td>Bradley</td>
+                      <td>$2000</td>
+                      <td>01/20/2019</td>
+                      <td><span class="badge badge-success w-50 py-2">Approved</span></td>
+                    </tr>
+                    <tr>
+                      <th>2</th>
+                      <td>Nick</td>
+                      <td>$200</td>
+                      <td>06/20/2019</td>
+                      <td><span class="badge badge-success w-50 py-2">Approved</span></td>
+                    </tr>
+                    <tr>
+                      <th>3</th>
+                      <td>BMW</td>
+                      <td>$1800</td>
+                      <td>01/20/2019</td>
+                      <td><span class="badge badge-warning w-50 py-2">Pending</span></td>
+                    </tr>
+                    <tr>
+                      <th>4</th>
+                      <td>Big O</td>
+                      <td>$2000</td>
+                      <td>09/20/2019</td>
+                      <td><span class="badge badge-danger w-50 py-2">Decline</span></td>
+                    </tr>
+                    <tr>
+                      <th>5</th>
+                      <td>Capital One</td>
+                      <td>$2000</td>
+                      <td>10/20/2019</td>
+                      <td><span class="badge badge-success w-50 py-2">Approved</span></td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!-- Pagination -->
+                <nav>
+                  <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                      <a href="#" class="page-link py-2 px-3">
+                        <span>Previous</span>
+                      </a>
+                    </li>
+                    <li class="page-item active">
+                      <a href="#" class="page-link py-2 px-3">
+                        1
+                      </a>
+                    </li>
+                    <li class="page-item">
+                      <a href="#" class="page-link py-2 px-3">
+                        2
+                      </a>
+                    </li>
+                    <li class="page-item">
+                      <a href="#" class="page-link py-2 px-3">
+                        3
+                      </a>
+                    </li>
+                    <li class="page-item">
+                      <a href="#" class="page-link py-2 px-3">
+                        <span>Next</span>
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+                <!-- End Pagination -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Tables -->
+
 
 
 
