Implement tooltips using javascript and complete project and tasks section

--- a/index.html
+++ b/index.html
@@ -343,6 +343,131 @@
     </section>
     <!-- End Tables -->
 
+    <!-- Progress / Task List -->
+    <section>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xl-10 col-ls-9 col-md-8 ml-auto">
+            <div class="row mb-4 align-items-center">
+              <div class="col-xl-6 col-12 mb-4 mb-xl-0">
+                <div class="bg-dark text-white p-4 rounded">
+                <h4 class="mb-5">Conversion Rates</h4>
+                <h6 class="mb-3">Google Chrome</h6>
+                <div class="progress mb-4" style="height: 20px">
+                  <div class="progress-bar progress-bar-striped font-weight-bold" style="width: 91%">
+                    91%
+                  </div>
+                </div>
+                <h6 class="mb-3">Mozilla Firefox</h6>
+                <div class="progress mb-4" style="height: 20px">
+                  <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 75%">
+                    75%
+                  </div>
+                </div>
+                <h6 class="mb-3">Safari</h6>
+                <div class="progress mb-4" style="height: 20px">
+                  <div class="progress-bar progress-bar-striped font-weight-bold bg-info" style="width: 55%">
+                    55%
+                  </div>
+                </div>
+                <h6 class="mb-3">Microsoft Edge</h6>
+                <div class="progress mb-4" style="height: 20px">
+                  <div class="progress-bar progress-bar-striped font-weight-bold bg-danger" style="width: 35%">
+                    35%
+                  </div>
+                </div>
+              </div>
+              </div>
+              <div class="col-xl-6 col-12">
+                <h4 class="text-muted p-3 mb-3">Tasks:</h4>
+                <div class="container-fluid bg-white">
+                  <div class="row py-3 mb-4 task-border">
+                    <div class="col-1">
+                      <input type="checkbox" checked>
+                    </div>
+                    <div class="col-sm-9 col-8">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Edit</h6>" data-html="true" data-placement="top"><i class="fas fa-edit fa-lg text-success mr-2"></i></a>
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Delete</h6>" data-html="true" data-placement="top"><i class="fas fa-trash-alt fa-lg text-danger mr-2"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="container-fluid bg-white">
+                  <div class="row py-3 mb-4 task-border align-items-center">
+                    <div class="col-1">
+                      <input type="checkbox" checked>
+                    </div>
+                    <div class="col-sm-9 col-8">
+                      Boudin bacon chicken ham hock. Capicola pancetta alcatra brisket bacon andouille, short loin doner leberkas.
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Edit</h6>" data-html="true" data-placement="top"><i class="fas fa-edit fa-lg text-success mr-2"></i></a>
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Delete</h6>" data-html="true" data-placement="top"><i class="fas fa-trash-alt fa-lg text-danger mr-2"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="container-fluid bg-white">
+                  <div class="row py-3 mb-4 task-border align-items-center">
+                    <div class="col-1">
+                      <input type="checkbox" checked>
+                    </div>
+                    <div class="col-sm-9 col-8">
+                      Filet mignon chicken turducken, shoulder tenderloin biltong beef frankfurter. Shank doner kevin bacon jerky drumstick rump ham hock hamburger t-bone sirloin pastrami salami tail.
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Edit</h6>" data-html="true" data-placement="top"><i class="fas fa-edit fa-lg text-success mr-2"></i></a>
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Delete</h6>" data-html="true" data-placement="top"><i class="fas fa-trash-alt fa-lg text-danger mr-2"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="container-fluid bg-white">
+                  <div class="row py-3 mb-4 task-border align-items-center">
+                    <div class="col-1">
+                      <input type="checkbox" checked>
+                    </div>
+                    <div class="col-sm-9 col-8">
+                      Bacon ipsum dolor amet andouille spare ribs shankle jowl pork loin, frankfurter shoulder turkey swine biltong. Landjaeger andouille bacon, prosciutto shank fatback kielbasa tongue shoulder.
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Edit</h6>" data-html="true" data-placement="top"><i class="fas fa-edit fa-lg text-success mr-2"></i></a>
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Delete</h6>" data-html="true" data-placement="top"><i class="fas fa-trash-alt fa-lg text-danger mr-2"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="container-fluid bg-white">
+                  <div class="row py-3 mb-4 task-border align-items-center">
+                    <div class="col-1">
+                      <input type="checkbox" checked>
+                    </div>
+                    <div class="col-sm-9 col-8">
+                      Chuck shankle beef ribs, hamburger pancetta drumstick ham cow shoulder meatloaf jerky spare ribs biltong rump. Meatloaf boudin andouille rump sausage, salami jowl short loin pork chop ribeye.
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Edit</h6>" data-html="true" data-placement="top"><i class="fas fa-edit fa-lg text-success mr-2"></i></a>
+                    </div>
+                    <div class="col-1">
+                      <a href="#" data-toggle="tooltip" title="<h6>Delete</h6>" data-html="true" data-placement="top"><i class="fas fa-trash-alt fa-lg text-danger mr-2"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END Progress / Task List -->
+
 
 
 
