Complete Activities section and implemented accordion feature

--- a/index.html
+++ b/index.html
@@ -468,6 +468,104 @@
     </section>
     <!-- END Progress / Task List -->
 
+    <!-- Activities / Quick Posts -->
+    <section>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+            <div class="row">
+              <div class="col-xl-7">
+                <h4 class="text-muted mb-4">Recent Customer Activities</h4>
+                <div id="accordion">
+                  <div class="card">
+                    <div class="card-header">
+                      <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseOne">
+                        <img src="images/cust1.jpeg" alt="customer1" width="50" class="mr-3 rounded">John posted a new comment
+                      </button>
+                    </div>
+                    <div>
+                      <div class="collapse show" id="collapseOne" data-parent="#accordion">
+                        <div class="card-body">
+                          Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <div class="card-header">
+                        <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseTwo">
+                          <img src="images/cust2.jpeg" alt="customer1" width="50" class="mr-3 rounded">Mark posted a new comment
+                        </button>
+                      </div>
+                      <div>
+                      <div class="collapse" id="collapseTwo" data-parent="#accordion">
+                        <div class="card-body">
+                          Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                        </div>
+                      </div>
+                    </div>
+                <div class="card">
+                  <div class="card-header">
+                    <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseThree">
+                      <img src="images/cust3.jpeg" alt="customer1" width="50" class="mr-3 rounded">Vivian posted a new comment
+                    </button>
+                  </div>
+                  <div>
+                    <div class="collapse" id="collapseThree" data-parent="#accordion">
+                      <div class="card-body">
+                        Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-header">
+                      <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseFour">
+                        <img src="images/cust4.jpeg" alt="customer1" width="50" class="mr-3 rounded">Monica posted a new comment
+                      </button>
+                    </div>
+                    <div>
+                      <div class="collapse" id="collapseFour" data-parent="#accordion">
+                        <div class="card-body">
+                          Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <div class="card-header">
+                        <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseFive">
+                          <img src="images/cust5.jpeg" alt="customer1" width="50" class="mr-3 rounded">Nick posted a new comment
+                        </button>
+                      </div>
+                      <div>
+                        <div class="collapse" id="collapseFive" data-parent="#accordion">
+                          <div class="card-body">
+                            Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card">
+                        <div class="card-header">
+                          <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseSix">
+                            <img src="images/cust6.jpeg" alt="customer1" width="50" class="mr-3 rounded">Ann posted a new comment
+                          </button>
+                        </div>
+                        <div>
+                        <div class="collapse" id="collapseSix" data-parent="#accordion">
+                          <div class="card-body">
+                            Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                          </div>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END Activities / Quick Posts -->
+
 
 
 
