Complete quick post section

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
-            <div class="row">
+            <div class="row align-items-center mb-5">
               <div class="col-xl-7">
                 <h4 class="text-muted mb-4">Recent Customer Activities</h4>
                 <div id="accordion">
@@ -483,7 +483,7 @@
                         <img src="images/cust1.jpeg" alt="customer1" width="50" class="mr-3 rounded">John posted a new comment
                       </button>
                     </div>
-                    <div>
+
                       <div class="collapse show" id="collapseOne" data-parent="#accordion">
                         <div class="card-body">
                           Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
@@ -496,7 +496,7 @@
                           <img src="images/cust2.jpeg" alt="customer1" width="50" class="mr-3 rounded">Mark posted a new comment
                         </button>
                       </div>
-                      <div>
+                    
                       <div class="collapse" id="collapseTwo" data-parent="#accordion">
                         <div class="card-body">
                           Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
@@ -509,7 +509,7 @@
                       <img src="images/cust3.jpeg" alt="customer1" width="50" class="mr-3 rounded">Vivian posted a new comment
                     </button>
                   </div>
-                  <div>
+
                     <div class="collapse" id="collapseThree" data-parent="#accordion">
                       <div class="card-body">
                         Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
@@ -519,51 +519,103 @@
                   <div class="card">
                     <div class="card-header">
                       <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseFour">
-                        <img src="images/cust4.jpeg" alt="customer1" width="50" class="mr-3 rounded">Monica posted a new comment
+                        <img src="images/cust4.jpeg" alt="customer4" width="50" class="mr-3 rounded">Monica posted a new comment
                       </button>
                     </div>
-                    <div>
-                      <div class="collapse" id="collapseFour" data-parent="#accordion">
+
+                    <div class="collapse" id="collapseFour" data-parent="#accordion">
+                      <div class="card-body">
+                        Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-header">
+                      <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseFive">
+                        <img src="images/cust5.jpeg" alt="customer5" width="50" class="mr-3 rounded">Nick posted a new comment
+                      </button>
+                    </div>
+
+                    <div class="collapse" id="collapseFive" data-parent="#accordion">
+                      <div class="card-body">
+                        Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-header">
+                      <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseSix">
+                        <img src="images/cust6.jpeg" alt="customer6" width="50" class="mr-3 rounded">Ann posted a new comment
+                      </button>
+                    </div>
+
+                    <div class="collapse" id="collapseSix" data-parent="#accordion">
+                      <div class="card-body">
+                        Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+
+            <div class="col-xl-5 mt-5">
+              <div class="card rounded">
+                <div class="card-body">
+                  <h5 class="text-muted text-center mb-4">Quick Status Post</h5>
+                  <ul class="list-inline text-center py-3">
+                    <li class="list-inline-item mr-4">
+                      <a href="#">
+                        <i class="fas fa-pencil-alt text-success"></i>
+                        <span class="h6 text-muted">Status</span>
+                      </a>
+                    </li>
+                    <li class="list-inline-item mr-4">
+                      <a href="#">
+                        <i class="fas fa-camera text-info"></i>
+                        <span class="h6 text-muted">Photo</span>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#">
+                        <i class="fas fa-map-marker-alt text-primary"></i>
+                        <span class="h6 text-muted">Check-in</span>
+                      </a>
+                    </li>
+                  </ul>
+                  <form>
+                    <div class="form-group">
+                      <input type="text" class="form-control py-2 mb-3" placeholder="What's your status...">
+                      <button type="button" class="btn btn-block text-uppercase font-weight-bold text-light bg-info py-2 mb-5">Submit Post</button>
+                    </div>
+                  </form>
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="card bg-light">
+                        <i class="far fa-calendar-alt fa-8x text-warning d-block m-auto py-3"></i>
                         <div class="card-body">
-                          Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
+                          <p class="card-text text-center font-weight-bold text-uppercase">Mon, May 26</p>
                         </div>
                       </div>
                     </div>
-                    <div class="card">
-                      <div class="card-header">
-                        <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseFive">
-                          <img src="images/cust5.jpeg" alt="customer1" width="50" class="mr-3 rounded">Nick posted a new comment
-                        </button>
-                      </div>
-                      <div>
-                        <div class="collapse" id="collapseFive" data-parent="#accordion">
-                          <div class="card-body">
-                            Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
-                          </div>
+                    <div class="col-6">
+                      <div class="card bg-light">
+                        <i class="far fa-clock fa-8x text-danger d-block m-auto py-3"></i>
+                        <div class="card-body">
+                          <p class="card-text text-center font-weight-bold text-uppercase">3:50 am</p>
                         </div>
                       </div>
-                      <div class="card">
-                        <div class="card-header">
-                          <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#collapseSix">
-                            <img src="images/cust6.jpeg" alt="customer1" width="50" class="mr-3 rounded">Ann posted a new comment
-                          </button>
-                        </div>
-                        <div>
-                        <div class="collapse" id="collapseSix" data-parent="#accordion">
-                          <div class="card-body">
-                            Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
-                          </div>
-                        </div>
-                      </div>
+                    </div>
+
                   </div>
                 </div>
               </div>
-              <div class="col-xl-5"></div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+
+</section>
     <!-- END Activities / Quick Posts -->
 
 
