Complete footer section

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                           <img src="images/cust2.jpeg" alt="customer1" width="50" class="mr-3 rounded">Mark posted a new comment
                         </button>
                       </div>
-                    
+
                       <div class="collapse" id="collapseTwo" data-parent="#accordion">
                         <div class="card-body">
                           Beef tenderloin pork chop beef ribs ham hock. Landjaeger capicola chuck t-bone porchetta pork chop doner ground round alcatra. Beef ribs cupim ground round burgdoggen pork belly.
@@ -605,7 +605,6 @@
                         </div>
                       </div>
                     </div>
-
                   </div>
                 </div>
               </div>
@@ -614,9 +613,40 @@
         </div>
       </div>
     </div>
-
 </section>
     <!-- END Activities / Quick Posts -->
+
+  <!-- Footer Section -->
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+          <div class="row border-top pt-4">
+            <div class="col-lg-6 text-center">
+              <ul class="list-inline">
+                <li class="list-inline-item mr-2">
+                  <a href="#" class="text-dark">CodeAndCreate</a>
+                </li>
+                <li class="list-inline-item mr-2">
+                  <a href="#" class="text-dark">About</a>
+                </li>
+                <li class="list-inline-item mr-2">
+                  <a href="#" class="text-dark">Support</a>
+                </li>
+                <li class="list-inline-item mr-2">
+                  <a href="#" class="text-dark">Blog</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-6 text-center">
+              <p>&copy; 2019 Copyright. Made with <i class="fas fa-heart text-danger"></i> by <span class="text-success">Shownola / Sherry Wasieko</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- END Footer Section -->
 
 
 
